Preliminary jazz2-native support

--- a/Config.in
+++ b/Config.in
@@ -570,6 +570,7 @@ menu "REG.linux"
   source "$BR2_EXTERNAL_REGLINUX_PATH/package/reglinux/ports/hurrican/Config.in"
   source "$BR2_EXTERNAL_REGLINUX_PATH/package/reglinux/ports/ioquake3/Config.in"
   source "$BR2_EXTERNAL_REGLINUX_PATH/package/reglinux/ports/iortcw/Config.in"
+  source "$BR2_EXTERNAL_REGLINUX_PATH/package/reglinux/ports/jazz2-native/Config.in"
   source "$BR2_EXTERNAL_REGLINUX_PATH/package/reglinux/ports/openjazz/Config.in"
   source "$BR2_EXTERNAL_REGLINUX_PATH/package/reglinux/ports/openlara/Config.in"
   source "$BR2_EXTERNAL_REGLINUX_PATH/package/reglinux/ports/sonic-mania/Config.in"
