Retroid Pocket preliminary support + misc minor bumps and fixes

--- a/package/batocera/core/batocera-configgen/configs/configgen-defaults.yml
+++ b/package/batocera/core/batocera-configgen/configs/configgen-defaults.yml
@@ -292,6 +292,9 @@ jaguar:
 jaguarcd:
   emulator: libretro
   core:     virtualjaguar
+jazz2:
+  emulator: jazz2-native
+  core:     jazz2-native
 laser310:
   emulator: libretro
   core:     mame
