--- a/package/batocera/core/batocera-system/Config.in
+++ b/package/batocera/core/batocera-system/Config.in
@@ -526,7 +526,7 @@ config BR2_TARGET_BATOCERA_IMAGES_DEFINITIONS
 
 	# Qualcomm targets
 	default "qualcomm/sd845/odin"									if BR2_PACKAGE_BATOCERA_TARGET_ODIN
-	default "qualcomm/sm8250/rp5"									if BR2_PACKAGE_BATOCERA_TARGET_SM8250
+	default "qualcomm/sm8250/rp5 qualcomm/sm8250/rpmini"						if BR2_PACKAGE_BATOCERA_TARGET_SM8250
 
 	# Mediatek targets
 	default "mediatek/mt8395/radxa-nio-12l"								if BR2_PACKAGE_BATOCERA_TARGET_MT8395
