--- a/package/batocera/core/batocera-system/Config.in
+++ b/package/batocera/core/batocera-system/Config.in
@@ -875,7 +875,9 @@ config BR2_PACKAGE_BATOCERA_SEGADC
 
 	select BR2_PACKAGE_LIBRETRO_FLYCASTVL	if BR2_PACKAGE_BATOCERA_TARGET_BCM2836	|| \
 						   BR2_PACKAGE_BATOCERA_TARGET_BCM2837	|| \
-						   BR2_PACKAGE_BATOCERA_TARGET_RK3326
+						   BR2_PACKAGE_BATOCERA_TARGET_RK3326   || \
+						   BR2_PACKAGE_BATOCERA_TARGET_H3       || \
+						   BR2_PACKAGE_BATOCERA_TARGET_CHA
 
 	help
 	  Sega Dreamcast and Naomi/Atomiswave emulation support
