Enable VPinball for bcm2712+saphira (will bump later)

--- a/package/batocera/core/batocera-system/Config.in
+++ b/package/batocera/core/batocera-system/Config.in
@@ -756,7 +756,11 @@ config BR2_PACKAGE_REGLINUX_PINBALL_SYSTEMS
     select BR2_PACKAGE_FPINBALL			if BR2_PACKAGE_BATOCERA_WINE
 
     # Virtual Pinball
-    select BR2_PACKAGE_VPINBALL			if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY || BR2_PACKAGE_BATOCERA_TARGET_RK3588 || BR2_PACKAGE_BATOCERA_TARGET_MT8395
+    select BR2_PACKAGE_VPINBALL			if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY || \
+						   BR2_PACKAGE_BATOCERA_TARGET_BCM2712    || \
+						   BR2_PACKAGE_BATOCERA_TARGET_RK3588     || \
+						   BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA    || \
+						   BR2_PACKAGE_BATOCERA_TARGET_MT8395
 
 
 ### Multi platform systems ###
