Enable vpinball on sm8250

--- a/package/batocera/core/batocera-system/Config.in
+++ b/package/batocera/core/batocera-system/Config.in
@@ -760,6 +760,7 @@ config BR2_PACKAGE_REGLINUX_PINBALL_SYSTEMS
 						   BR2_PACKAGE_BATOCERA_TARGET_BCM2712    || \
 						   BR2_PACKAGE_BATOCERA_TARGET_RK3588     || \
 						   BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA    || \
+						   BR2_PACKAGE_BATOCERA_TARGET_SM8250     || \
 						   BR2_PACKAGE_BATOCERA_TARGET_MT8395
 
 
