--- a/board/batocera/qualcomm/sm8250/linux_sm8250-defconfig.config
+++ b/board/batocera/qualcomm/sm8250/linux_sm8250-defconfig.config
@@ -3576,6 +3576,7 @@ CONFIG_INPUT_XEN_KBDDEV_FRONTEND=y
 # CONFIG_INPUT_DRV260X_HAPTICS is not set
 # CONFIG_INPUT_DRV2665_HAPTICS is not set
 # CONFIG_INPUT_DRV2667_HAPTICS is not set
+CONFIG_INPUT_QCOM_SPMI_HAPTICS=y
 CONFIG_INPUT_HISI_POWERKEY=y
 # CONFIG_RMI4_CORE is not set
 
