Update kernel modules to buildin

--- a/board/batocera/qualcomm/sm8250/linux_sm8250-defconfig.config
+++ b/board/batocera/qualcomm/sm8250/linux_sm8250-defconfig.config
@@ -5814,7 +5814,7 @@ CONFIG_DRM_PANEL=y
 # CONFIG_DRM_PANEL_BOE_HIMAX8279D is not set
 # CONFIG_DRM_PANEL_BOE_TH101MB31UIG002_28A is not set
 CONFIG_DRM_PANEL_BOE_TV101WUM_NL6=m
-CONFIG_DRM_PANEL_DDIC_CH13726A=m
+CONFIG_DRM_PANEL_DDIC_CH13726A=y
 # CONFIG_DRM_PANEL_EBBG_FT8719 is not set
 # CONFIG_DRM_PANEL_ELIDA_KD35T133 is not set
 # CONFIG_DRM_PANEL_FEIXIN_K101_IM2BA02 is not set
@@ -7485,7 +7485,7 @@ CONFIG_LEDS_PWM=y
 # CONFIG_LEDS_LM355x is not set
 # CONFIG_LEDS_IS31FL319X is not set
 # CONFIG_LEDS_IS31FL32XX is not set
-
+CONFIG_LEDS_HTR3212=y
 #
 # LED driver for blink(1) USB RGB LED is under Special HID drivers (HID_THINGM)
 #
@@ -7508,7 +7508,7 @@ CONFIG_LEDS_BCM63138=y
 # CONFIG_LEDS_KTD202X is not set
 # CONFIG_LEDS_NCP5623 is not set
 # CONFIG_LEDS_PWM_MULTICOLOR is not set
-CONFIG_LEDS_QCOM_LPG=m
+CONFIG_LEDS_QCOM_LPG=y
 
 #
 # LED Triggers
