--- a/package/batocera/core/batocera-system/Config.in
+++ b/package/batocera/core/batocera-system/Config.in
@@ -775,10 +775,10 @@ config BR2_PACKAGE_REGLINUX_MULTI_SYSTEMS
     select BR2_PACKAGE_BOX64			if BR2_aarch64 || BR2_RISCV_64
 
     # CLK - Clock Signal emulator
-    select BR2_PACKAGE_CLK			if BR2_PACKAGE_HAS_LIBGL
+    # not for 24.12 select BR2_PACKAGE_CLK			if BR2_PACKAGE_HAS_LIBGL
 
     # Mednafen
-    select BR2_PACKAGE_MEDNAFEN			if !BR2_PACKAGE_BATOCERA_TARGET_BCM2835 && !BR2_mipsel
+    # not for 24.12 select BR2_PACKAGE_MEDNAFEN			if !BR2_PACKAGE_BATOCERA_TARGET_BCM2835 && !BR2_mipsel
 
     # Ares
     # not yet select BR2_PACKAGE_ARES			if BR2_ARCH_IS_64 && BR2_PACKAGE_HAS_LIBGL
@@ -1139,7 +1139,7 @@ config BR2_PACKAGE_BATOCERA_PORTS_SYSTEMS
 
 	# Yamagi Quake 2 (source port)
 	# Note: Needs CMake work to build for GLES3 (or even GLES2 + gl4es)
-	select BR2_PACKAGE_YQUAKE2                      if BR2_PACKAGE_HAS_LIBGL # TODO || BR2_PACKAGE_BATOCERA_GLES3
+	# not for 24.12 select BR2_PACKAGE_YQUAKE2                      if BR2_PACKAGE_HAS_LIBGL # TODO || BR2_PACKAGE_BATOCERA_GLES3
 
 	# Quake 3 (source port)
 	# Note : needs work on gl4es patch (applying it only if no desktop GL support)
