--- a/package/batocera/gpu/batocera-nvidia-driver/Config.in
+++ b/package/batocera/gpu/batocera-nvidia-driver/Config.in
@@ -31,7 +31,7 @@ config BR2_PACKAGE_BATOCERA_NVIDIA_DRIVER_XORG
 	select BR2_PACKAGE_XLIB_LIBXEXT
 	depends on BR2_PACKAGE_HAS_LIBGL
 	depends on BR2_PACKAGE_HAS_LIBEGL
-	depends on BR2_PACKAGE_HAS_LIBEGL_WAYLAND
+	select BR2_PACKAGE_HAS_LIBEGL_WAYLAND
 #batocera GLES support is not enable in mesa3d by default
 #	select BR2_PACKAGE_HAS_LIBGLES
 	depends on BR2_PACKAGE_LIBGLVND
