--- a/package/reglinux/emulators/cemu/Config.in
+++ b/package/reglinux/emulators/cemu/Config.in
@@ -18,7 +18,7 @@ config BR2_PACKAGE_CEMU
     select BR2_PACKAGE_LIBUSB
     select BR2_PACKAGE_WXWIDGETS
     select BR2_PACKAGE_UPOWER                   # required by some cemuhook servers
-    #select BR2_PACKAGE_HIDAPI
+    select BR2_PACKAGE_HIDAPI
     help
       Cemu is a Wii U emulator that now runs natively on Linux.
 
