--- a/Config.in
+++ b/Config.in
@@ -125,7 +125,7 @@ menu "Emulationstation"
 endmenu
 
 menu "Controllers"
-  source "$BR2_EXTERNAL_REGLINUX_PATH/package/batocera/controllers/anbernic-gpio-pad/Config.in"
+  #nope source "$BR2_EXTERNAL_REGLINUX_PATH/package/batocera/controllers/anbernic-gpio-pad/Config.in"
   source "$BR2_EXTERNAL_REGLINUX_PATH/package/batocera/controllers/db9_gpio_rpi/Config.in"
   source "$BR2_EXTERNAL_REGLINUX_PATH/package/batocera/controllers/gamecon_gpio_rpi/Config.in"
   source "$BR2_EXTERNAL_REGLINUX_PATH/package/batocera/controllers/mk_arcade_joystick_rpi/Config.in"
