--- a/package/reglinux/emulators/melonds/Config.in
+++ b/package/reglinux/emulators/melonds/Config.in
@@ -2,6 +2,7 @@ config BR2_PACKAGE_MELONDS
     bool "melonDS"
     select BR2_PACKAGE_LIBARCHIVE
     select BR2_PACKAGE_LIBEPOXY
+    select BR2_PACKAGE_LIBENET
     select BR2_PACKAGE_SDL2
     select BR2_PACKAGE_SLIRP
     select BR2_PACKAGE_REGLINUX_QT6
