WIP Anbernic RGxx3 U-Boot mainline

--- a/board/batocera/rockchip/rk3568/anbernic-rgxx3/genimage.cfg
+++ b/board/batocera/rockchip/rk3568/anbernic-rgxx3/genimage.cfg
@@ -19,36 +19,25 @@ image userdata.ext4 {
 
 image reglinux.img {
 	hdimage {
-		partition-table-type = "gpt"
+		partition-table-type = "hybrid"
 		align = "1M"
 	}
 
-	partition idbloader {
+	partition uboot {
 		in-partition-table = "no"
-		image = "../uboot-anbernic-rgxx3/idbloader.img"
+		image = "../uboot-anbernic-rgxx3/u-boot-rockchip.bin"
 		offset = 32K
 	}
 
-	partition uboot {
-		in-partition-table = "yes"
-		image = "../uboot-anbernic-rgxx3/uboot.img"
-		offset = 8M
-	}
-
-	partition resource {
-		in-partition-table = "yes"
-		image = "../uboot-anbernic-rgxx3/resource.img"
-		offset = 12M
-		size = 4M
-	}
-
 	partition boot {
+                partition-type = 0xC
 		bootable = "true"
 		image = "boot.vfat"
 		offset = 16M
 	}
 
 	partition userdata {
+                partition-type = 0x83
 		image = "userdata.ext4"
 	}
 }
