--- a/Config.in
+++ b/Config.in
@@ -33,7 +33,7 @@ menu "System"
     source "$BR2_EXTERNAL_REGLINUX_PATH/package/batocera/boot/uboot-rock-3c/Config.in"
     source "$BR2_EXTERNAL_REGLINUX_PATH/package/batocera/boot/uboot-firefly-station-m2/Config.in"
     source "$BR2_EXTERNAL_REGLINUX_PATH/package/batocera/boot/uboot-firefly-station-p2/Config.in"
-    source "$BR2_EXTERNAL_REGLINUX_PATH/package/batocera/boot/uboot-anbernic-rgxx3/Config.in"
+#    source "$BR2_EXTERNAL_REGLINUX_PATH/package/batocera/boot/uboot-anbernic-rgxx3/Config.in"
     source "$BR2_EXTERNAL_REGLINUX_PATH/package/batocera/boot/uboot-vim4/Config.in"
     source "$BR2_EXTERNAL_REGLINUX_PATH/package/batocera/boot/uboot-vim1s/Config.in"
     source "$BR2_EXTERNAL_REGLINUX_PATH/package/batocera/boot/uboot-orangepi-5-plus/Config.in"
