Move most rk3566/rk3568 targets to mainline uboot. NEEDS UPDATED DOCKER IMAGE.

--- a/board/batocera/rockchip/rk3568/anbernic-rgxx3/genimage.cfg
+++ b/board/batocera/rockchip/rk3568/anbernic-rgxx3/genimage.cfg
@@ -29,15 +29,15 @@ image reglinux.img {
 		offset = 32K
 	}
 
-	partition boot {
-                partition-type = 0xC
-		bootable = "true"
+	partition vfat {
+		partition-type = 0xC
 		image = "boot.vfat"
 		offset = 16M
+		bootable = "true"
 	}
 
 	partition userdata {
-                partition-type = 0x83
+		partition-type = 0x83
 		image = "userdata.ext4"
 	}
 }
