--- a/board/batocera/rockchip/rk3568/rock-3c/genimage.cfg
+++ b/board/batocera/rockchip/rk3568/rock-3c/genimage.cfg
@@ -23,22 +23,17 @@ image reglinux.img {
 		align = "1M"
 	}
 
-	partition part_idbloader {
-		in-partition-table = "no"
-		image = "../uboot-rock-3c/idbloader.img"
-		offset = 32K
-	}
-
 	partition uboot {
 		in-partition-table = "no"
-		image = "../uboot-rock-3c/u-boot.itb"
-		offset = 8M
+		image = "../uboot-rock-3c/u-boot-rockchip.bin"
+		offset = 32K
 	}
 
 	partition vfat {
 		partition-type = 0xC
 		image = "boot.vfat"
 		offset = 16M
+		bootable = "true"
 	}
 
 	partition userdata {
