--- a/board/batocera/rockchip/rk3568/odroid-m1/genimage.cfg
+++ b/board/batocera/rockchip/rk3568/odroid-m1/genimage.cfg
@@ -23,16 +23,10 @@ image reglinux.img {
 		align = "1M"
 	}
 
-	partition part_idbloader {
-		in-partition-table = "no"
-		image = "../uboot-odroid-m1/idbloader.img"
-		offset = 32K
-	}
-
 	partition uboot {
 		in-partition-table = "no"
-		image = "../uboot-odroid-m1/u-boot.itb"
-		offset = 8M
+		image = "../uboot-odroid-m1/u-boot-rockchip.bin"
+		offset = 32K
 	}
 
 	partition vfat {
