--- a/board/batocera/rockchip/rk3568/odroid-m1s/genimage.cfg
+++ b/board/batocera/rockchip/rk3568/odroid-m1s/genimage.cfg
@@ -1,9 +1,9 @@
 image boot.vfat {
-        vfat {
-                extraargs = "-F 32 -n REGLINUX"
+	vfat {
+		extraargs = "-F 32 -n REGLINUX"
 		@files
-        }
-        size = 2G
+	}
+	size = 2G
 }
 
 image userdata.ext4 {
@@ -23,9 +23,9 @@ image reglinux.img {
 		align = "1M"
 	}
 
-	partition part_uboot {
+	partition uboot {
 		in-partition-table = "no"
-		image = "../../u-boot-rockchip.bin"
+		image = "../uboot-odroid-m1s/u-boot-rockchip.bin"
 		offset = 32K
 	}
 
