--- a/board/batocera/rockchip/rk3588/orangepi-5b/genimage.cfg
+++ b/board/batocera/rockchip/rk3588/orangepi-5b/genimage.cfg
@@ -23,16 +23,10 @@ image reglinux.img {
 		partition-table-type = "gpt"
 	}
 
-        partition part_idbloader {
+        partition uboot {
                 in-partition-table = "no"
-                image = "../../orangepi-5/idbloader.img"
+                image = "../uboot-orangepi-5b/u-boot-rockchip.bin"
                 offset = 32K
-        }
-
-        partition part_uboot {
-                in-partition-table = "no"
-                image = "../../orangepi-5/u-boot.itb"
-                offset = 8M
         }
 
 	partition vfat {
