--- a/board/batocera/rockchip/rk3588/rock-5b/genimage.cfg
+++ b/board/batocera/rockchip/rk3588/rock-5b/genimage.cfg
@@ -23,9 +23,9 @@ image reglinux.img {
 		partition-table-type = "gpt"
 	}
 
-        partition part_uboot {
+        partition uboot {
                 in-partition-table = "no"
-                image = "../../u-boot-rockchip.bin"
+                image = "../uboot-rock-5b/u-boot-rockchip.bin"
                 offset = 32K
         }
 
