--- a/board/batocera/rockchip/rk3588/rock-5a/genimage.cfg
+++ b/board/batocera/rockchip/rk3588/rock-5a/genimage.cfg
@@ -23,16 +23,10 @@ image reglinux.img {
 		partition-table-type = "gpt"
 	}
 
-        partition part_idbloader {
+        partition uboot {
                 in-partition-table = "no"
-                image = "../../rock-5a/idbloader.img"
+                image = "../uboot-rock-5a/u-boot-rockchip.bin"
                 offset = 32K
-        }
-
-        partition part_uboot {
-                in-partition-table = "no"
-                image = "../../rock-5a/u-boot.itb"
-                offset = 8M
         }
 
 	partition vfat {
