--- a/package/batocera/core/batocera-system/Config.in
+++ b/package/batocera/core/batocera-system/Config.in
@@ -191,11 +191,9 @@ config BR2_PACKAGE_BATOCERA_SYSTEM
 	select BR2_PACKAGE_DOSFSTOOLS_FSCK_FAT		# fat
 	select BR2_PACKAGE_DOSFSTOOLS_MKFS_FAT		# fat
 	select BR2_PACKAGE_DOSFSTOOLS_FATLABEL		# fat
-	select BR2_PACKAGE_EXFAT			# exfat
-	select BR2_PACKAGE_EXFAT_UTILS			# exfat
 	select BR2_PACKAGE_E2FSPROGS			# ext4
-	select BR2_PACKAGE_NTFS_3G			# ntfs
-	select BR2_PACKAGE_NTFS_3G_NTFSPROGS		# ntfs
+	select BR2_PACKAGE_REGLINUX_EXFAT		# exfat
+	select BR2_PACKAGE_REGLINUX_NTFS		# ntfs
 	select BR2_PACKAGE_BTRFS_PROGS			# btrfs
 	select BR2_PACKAGE_CONNMAN			# network manager
 	select BR2_PACKAGE_CONNMAN_WIFI			# network manager
