--- a/board/batocera/rockchip/rk3326/linux-defconfig.config
+++ b/board/batocera/rockchip/rk3326/linux-defconfig.config
@@ -535,7 +535,7 @@ CONFIG_CMDLINE=""
 #
 CONFIG_SUSPEND=y
 CONFIG_SUSPEND_FREEZER=y
-# CONFIG_SUSPEND_SKIP_SYNC is not set
+CONFIG_SUSPEND_SKIP_SYNC=y
 CONFIG_HIBERNATE_CALLBACKS=y
 CONFIG_HIBERNATION=y
 # CONFIG_HIBERNATION_SNAPSHOT_DEV is not set
@@ -544,7 +544,7 @@ CONFIG_HIBERNATION_DEF_COMP="lzo"
 CONFIG_PM_STD_PARTITION=""
 CONFIG_PM_SLEEP=y
 CONFIG_PM_SLEEP_SMP=y
-# CONFIG_PM_AUTOSLEEP is not set
+CONFIG_PM_AUTOSLEEP=y
 # CONFIG_PM_USERSPACE_AUTOSLEEP is not set
 # CONFIG_PM_WAKELOCKS is not set
 CONFIG_PM=y
