Switch bcm2712 rk3588 sm8250 to 16K page size for better performance

--- a/board/batocera/rockchip/rk3588/linux-defconfig.config
+++ b/board/batocera/rockchip/rk3588/linux-defconfig.config
@@ -2,14 +2,14 @@
 # Automatically generated file; DO NOT EDIT.
 # Linux/arm64 6.1.75 Kernel Configuration
 #
-CONFIG_CC_VERSION_TEXT="aarch64-buildroot-linux-gnu-gcc.br_real (Buildroot 2019.11-27707-g5d67742467) 13.3.0"
+CONFIG_CC_VERSION_TEXT="aarch64-buildroot-linux-gnu-gcc.br_real (Buildroot 2019.11-30926-g5a8b5eeb61) 13.3.0"
 CONFIG_CC_IS_GCC=y
 CONFIG_GCC_VERSION=130300
 CONFIG_CLANG_VERSION=0
 CONFIG_AS_IS_GNU=y
-CONFIG_AS_VERSION=24000
+CONFIG_AS_VERSION=24100
 CONFIG_LD_IS_BFD=y
-CONFIG_LD_VERSION=24000
+CONFIG_LD_VERSION=24100
 CONFIG_LLD_VERSION=0
 CONFIG_CC_CAN_LINK=y
 CONFIG_CC_CAN_LINK_STATIC=y
@@ -27,7 +27,7 @@ CONFIG_THREAD_INFO_IN_TASK=y
 #
 CONFIG_INIT_ENV_ARG_LIMIT=32
 # CONFIG_COMPILE_TEST is not set
-CONFIG_WERROR=y
+# CONFIG_WERROR is not set
 CONFIG_LOCALVERSION="-reglinux"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_BUILD_SALT=""
@@ -268,12 +268,12 @@ CONFIG_ARM64=y
 CONFIG_GCC_SUPPORTS_DYNAMIC_FTRACE_WITH_REGS=y
 CONFIG_64BIT=y
 CONFIG_MMU=y
-CONFIG_ARM64_PAGE_SHIFT=12
-CONFIG_ARM64_CONT_PTE_SHIFT=4
-CONFIG_ARM64_CONT_PMD_SHIFT=4
-CONFIG_ARCH_MMAP_RND_BITS_MIN=18
-CONFIG_ARCH_MMAP_RND_BITS_MAX=33
-CONFIG_ARCH_MMAP_RND_COMPAT_BITS_MIN=11
+CONFIG_ARM64_PAGE_SHIFT=14
+CONFIG_ARM64_CONT_PTE_SHIFT=7
+CONFIG_ARM64_CONT_PMD_SHIFT=5
+CONFIG_ARCH_MMAP_RND_BITS_MIN=16
+CONFIG_ARCH_MMAP_RND_BITS_MAX=31
+CONFIG_ARCH_MMAP_RND_COMPAT_BITS_MIN=9
 CONFIG_ARCH_MMAP_RND_COMPAT_BITS_MAX=16
 CONFIG_STACKTRACE_SUPPORT=y
 CONFIG_ILLEGAL_POINTER_VALUE=0xdead000000000000
@@ -383,10 +383,11 @@ CONFIG_NVIDIA_CARMEL_CNP_ERRATUM=y
 CONFIG_SOCIONEXT_SYNQUACER_PREITS=y
 # end of ARM errata workarounds via the alternatives framework
 
-CONFIG_ARM64_4K_PAGES=y
-# CONFIG_ARM64_16K_PAGES is not set
+# CONFIG_ARM64_4K_PAGES is not set
+CONFIG_ARM64_16K_PAGES=y
 # CONFIG_ARM64_64K_PAGES is not set
-# CONFIG_ARM64_VA_BITS_39 is not set
+# CONFIG_ARM64_VA_BITS_36 is not set
+# CONFIG_ARM64_VA_BITS_47 is not set
 CONFIG_ARM64_VA_BITS_48=y
 CONFIG_ARM64_VA_BITS=48
 CONFIG_ARM64_PA_BITS_48=y
@@ -414,7 +415,7 @@ CONFIG_CC_HAVE_SHADOW_CALL_STACK=y
 # CONFIG_KEXEC_FILE is not set
 # CONFIG_CRASH_DUMP is not set
 # CONFIG_XEN is not set
-CONFIG_ARCH_FORCE_MAX_ORDER=11
+CONFIG_ARCH_FORCE_MAX_ORDER=12
 CONFIG_UNMAP_KERNEL_AT_EL0=y
 CONFIG_MITIGATE_SPECTRE_BRANCH_HISTORY=y
 CONFIG_RODATA_FULL_DEFAULT_ENABLED=y
@@ -913,7 +914,6 @@ CONFIG_PHYS_ADDR_T_64BIT=y
 CONFIG_DEFAULT_MMAP_MIN_ADDR=32768
 CONFIG_ARCH_SUPPORTS_MEMORY_FAILURE=y
 # CONFIG_MEMORY_FAILURE is not set
-CONFIG_ARCH_WANTS_THP_SWAP=y
 # CONFIG_TRANSPARENT_HUGEPAGE is not set
 CONFIG_CMA=y
 # CONFIG_CMA_INACTIVE is not set
@@ -2194,6 +2194,7 @@ CONFIG_NVME_TARGET_AUTH=y
 # end of RK628 misc driver
 
 # CONFIG_RK803 is not set
+# CONFIG_CONFIG_ROCKPI_MCU is not set
 # CONFIG_PCIE_FUNC_RKEP is not set
 # CONFIG_LT7911D_FB_NOTIFIER is not set
 # CONFIG_AD525X_DPOT is not set
@@ -5606,6 +5607,7 @@ CONFIG_DRM_PANEL_ORISETECH_OTM8009A=m
 CONFIG_DRM_PANEL_PANASONIC_VVX10F034N00=m
 # CONFIG_DRM_PANEL_RADXA_DISPLAY_8HD is not set
 CONFIG_DRM_PANEL_RASPBERRYPI_TOUCHSCREEN=m
+# CONFIG_DRM_PANEL_RASPITS_TC358762 is not set
 # CONFIG_DRM_PANEL_RAYDIUM_RM67191 is not set
 # CONFIG_DRM_PANEL_RAYDIUM_RM68200 is not set
 CONFIG_DRM_PANEL_RONBO_RB070D30=m
@@ -5726,29 +5728,29 @@ CONFIG_DRM_PANTHOR=m
 CONFIG_DRM_PANEL_ORIENTATION_QUIRKS=y
 CONFIG_DRM_NOMODESET=y
 # CONFIG_MALI400 is not set
-CONFIG_MALI_DEVFREQ=y
-CONFIG_MALI_MIDGARD=y
+# CONFIG_MALI_DEVFREQ is not set
+# CONFIG_MALI_MIDGARD is not set 
 # CONFIG_MALI_GATOR_SUPPORT is not set
 # CONFIG_MALI_MIDGARD_ENABLE_TRACE is not set
 # CONFIG_MALI_DMA_FENCE is not set
-CONFIG_MALI_EXPERT=y
+# CONFIG_MALI_EXPERT is not set 
 # CONFIG_MALI_CORESTACK is not set
 # CONFIG_MALI_PRFCNT_SET_SECONDARY is not set
 # CONFIG_MALI_PLATFORM_FAKE is not set
 # CONFIG_MALI_PLATFORM_DEVICETREE is not set
-CONFIG_MALI_PLATFORM_THIRDPARTY=y
-CONFIG_MALI_PLATFORM_THIRDPARTY_NAME="rk"
-CONFIG_MALI_DEBUG=y
-CONFIG_MALI_FENCE_DEBUG=y
+# CONFIG_MALI_PLATFORM_THIRDPARTY is not set 
+# CONFIG_MALI_PLATFORM_THIRDPARTY_NAME is not set
+# CONFIG_MALI_DEBUG is not set
+# CONFIG_MALI_FENCE_DEBUG is not set
 # CONFIG_MALI_NO_MALI is not set
 # CONFIG_MALI_TRACE_TIMELINE is not set
 # CONFIG_MALI_SYSTEM_TRACE is not set
 # CONFIG_MALI_GPU_MMU_AARCH64 is not set
-CONFIG_MALI_PWRSOFT_765=y
+# CONFIG_MALI_PWRSOFT_765 is not set
 # CONFIG_MALI_KUTF is not set
-CONFIG_MALI_BIFROST=y
-CONFIG_MALI_PLATFORM_NAME="rk"
-CONFIG_MALI_REAL_HW=y
+# CONFIG_MALI_BIFROST is not set 
+# CONFIG_MALI_PLATFORM_NAME is not set 
+# CONFIG_MALI_REAL_HW is not set
 # CONFIG_MALI_BIFROST_NO_MALI is not set
 
 #
@@ -8550,7 +8552,6 @@ CONFIG_CIFS_DFS_UPCALL=y
 CONFIG_SMB_SERVER=y
 CONFIG_SMB_SERVER_CHECK_CAP_NET_ADMIN=y
 # CONFIG_SMB_SERVER_KERBEROS5 is not set
-# CONFIG_SMB_SERVER_SMBDIRECT is not set
 CONFIG_SMBFS=y
 # CONFIG_CODA_FS is not set
 # CONFIG_AFS_FS is not set
@@ -9206,14 +9207,9 @@ CONFIG_ARCH_HAS_DEBUG_VIRTUAL=y
 # CONFIG_DEBUG_VIRTUAL is not set
 CONFIG_DEBUG_MEMORY_INIT=y
 # CONFIG_DEBUG_PER_CPU_MAPS is not set
-CONFIG_HAVE_ARCH_KASAN=y
-CONFIG_HAVE_ARCH_KASAN_SW_TAGS=y
-CONFIG_HAVE_ARCH_KASAN_HW_TAGS=y
-CONFIG_HAVE_ARCH_KASAN_VMALLOC=y
 CONFIG_CC_HAS_KASAN_GENERIC=y
 CONFIG_CC_HAS_KASAN_SW_TAGS=y
 CONFIG_CC_HAS_WORKING_NOSANITIZE_ADDRESS=y
-# CONFIG_KASAN is not set
 CONFIG_HAVE_ARCH_KFENCE=y
 # CONFIG_KFENCE is not set
 # end of Memory Debugging
