Rework RK3399 uboot

--- a/board/batocera/rockchip/rk3399/anbernic-rg552/genimage.cfg
+++ b/board/batocera/rockchip/rk3399/anbernic-rg552/genimage.cfg
@@ -19,26 +19,15 @@ image userdata.ext4 {
 
 image reglinux.img {
 	hdimage {
+		partition-table-type = "hybrid"
 		align = "1M"
 	}
 
-	partition part_idbloader {
-		in-partition-table = "no"
-		image = "../../idbloader-rockpro64.img"
-		offset = 32K
-	}
-
-	partition part_uboot {
-		in-partition-table = "no"
-		image = "../../u-boot-rockpro64.bin"
-		offset = 8M
-	}
-
-	partition part_trust {
-		in-partition-table = "no"
-		image = "../../trust-rockpro64.img"
-		offset = 12M
-	}
+        partition part_uboot {
+            in-partition-table = "no"
+            image = "../uboot-anbernic-rg552/u-boot-rockchip.bin"
+            offset = 32K
+        }
 
 	partition vfat {
 		partition-type = 0xC
