--- a/board/batocera/rockchip/rk3399/rock960/genimage.cfg
+++ b/board/batocera/rockchip/rk3399/rock960/genimage.cfg
@@ -19,26 +19,14 @@ image userdata.ext4 {
 
 image reglinux.img {
 	hdimage {
-                partition-table-type = "hybrid"
+		partition-table-type = "hybrid"
 		align = "1M"
 	}
 
-        partition part_idbloader {
-            in-partition-table = "no"
-            image = "../../uboot-evb-rk3399/idbloader.img"
-            offset = 32K
-        }
-
         partition part_uboot {
             in-partition-table = "no"
-            image = "../../uboot-evb-rk3399/uboot.img"
-            offset = 8M
-        }
-
-        partition part_trust {
-            in-partition-table = "no"
-            image = "../../uboot-evb-rk3399/trust.img"
-            offset = 12M
+            image = "../uboot-rock960/u-boot-rockchip.bin"
+            offset = 32K
         }
 
 	partition vfat {
