--- a/board/batocera/rockchip/rk3399/tinkerboard-2/genimage.cfg
+++ b/board/batocera/rockchip/rk3399/tinkerboard-2/genimage.cfg
@@ -23,16 +23,10 @@ image reglinux.img {
 		align = "1M"
 	}
 
-        partition part_idbloader {
-            in-partition-table = "no"
-            image = "../../uboot-tinkerboard2/idbloader.img"
-            offset = 32K
-        }
-
         partition part_uboot {
             in-partition-table = "no"
-            image = "../../uboot-tinkerboard2/u-boot.itb"
-            offset = 8M
+            image = "../uboot-tinkerboard-2/u-boot-rockchip.bin"
+            offset = 32K
         }
 
 	partition vfat {
