--- a/board/batocera/rockchip/rk3399/hugsun-x99/genimage.cfg
+++ b/board/batocera/rockchip/rk3399/hugsun-x99/genimage.cfg
@@ -19,25 +19,14 @@ image userdata.ext4 {
 
 image reglinux.img {
 	hdimage {
+		partition-table-type = "hybrid"
 		align = "1M"
 	}
 
-        partition part_idbloader {
-            in-partition-table = "no"
-            image = "../../uboot-hugsun-x99/idbloader.bin"
-            offset = 32K
-        }
-
         partition part_uboot {
             in-partition-table = "no"
-            image = "../../uboot-hugsun-x99/uboot.img"
-            offset = 8M
-        }
-
-        partition part_trust {
-            in-partition-table = "no"
-            image = "../../uboot-hugsun-x99/trust.bin"
-            offset = 12M
+            image = "../uboot-hugsun-x99/u-boot-rockchip.bin"
+            offset = 32K
         }
 
 	partition vfat {
