--- a/board/batocera/rockchip/rk3399/rock-pi-4/genimage.cfg
+++ b/board/batocera/rockchip/rk3399/rock-pi-4/genimage.cfg
@@ -19,19 +19,14 @@ image userdata.ext4 {
 
 image reglinux.img {
 	hdimage {
+		partition-table-type = "hybrid"
 		align = "1M"
 	}
 
-        partition part_idbloader {
-            in-partition-table = "no"
-            image ="../../uboot-multiboard/rock-pi-4-rk3399/idbloader.img"
-            offset = 32K
-        }
-
         partition part_uboot {
             in-partition-table = "no"
-            image ="../../uboot-multiboard/rock-pi-4-rk3399/u-boot.itb"
-            offset = 8M
+            image = "../uboot-rock-pi-4/u-boot-rockchip.bin"
+            offset = 32K
         }
 
 	partition vfat {
