--- a/package/reglinux/emulators/vice/Config.in
+++ b/package/reglinux/emulators/vice/Config.in
@@ -1,6 +1,6 @@
 config BR2_PACKAGE_VICE
 	bool "vice"
-	select BR2_PACKAGE_FFMPEG
+	#needs old ffmpeg 4.x select BR2_PACKAGE_FFMPEG
 	select BR2_PACKAGE_SDL2
 	select BR2_PACKAGE_SDL2_IMAGE
 	select BR2_PACKAGE_PNG
@@ -10,6 +10,9 @@ config BR2_PACKAGE_VICE
 	select BR2_PACKAGE_LAME
 	select BR2_PACKAGE_ALSA_LIB
 	select BR2_PACKAGE_LIBCURL
+	select BR2_PACKAGE_LIBVORBIS
+	select BR2_PACKAGE_MPG123
+	select BR2_PACKAGE_FLAG
 	select BR2_PACKAGE_HOST_XA
 	select BR2_PACKAGE_HOST_DOS2UNIX
 	help
