--- a/board/batocera/rockchip/rk3326/linux-rk3326-defconfig.config
+++ b/board/batocera/rockchip/rk3326/linux-rk3326-defconfig.config
@@ -1,15 +1,15 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 6.12.1 Kernel Configuration
+# Linux/arm64 6.12.6 Kernel Configuration
 #
-CONFIG_CC_VERSION_TEXT="aarch64-buildroot-linux-gnu-gcc.br_real (Buildroot 2019.11-27808-g70021c47eb) 13.3.0"
+CONFIG_CC_VERSION_TEXT="aarch64-buildroot-linux-gnu-gcc.br_real (Buildroot 2019.11-30928-gd44c11c127) 13.3.0"
 CONFIG_CC_IS_GCC=y
 CONFIG_GCC_VERSION=130300
 CONFIG_CLANG_VERSION=0
 CONFIG_AS_IS_GNU=y
-CONFIG_AS_VERSION=24000
+CONFIG_AS_VERSION=24100
 CONFIG_LD_IS_BFD=y
-CONFIG_LD_VERSION=24000
+CONFIG_LD_VERSION=24100
 CONFIG_LLD_VERSION=0
 CONFIG_RUSTC_VERSION=0
 CONFIG_RUSTC_LLVM_VERSION=0
@@ -392,6 +392,7 @@ CONFIG_CAVIUM_ERRATUM_30115=y
 CONFIG_CAVIUM_TX2_ERRATUM_219=y
 CONFIG_FUJITSU_ERRATUM_010001=y
 CONFIG_HISILICON_ERRATUM_161600802=y
+CONFIG_HISILICON_ERRATUM_162100801=y
 CONFIG_QCOM_FALKOR_ERRATUM_1003=y
 CONFIG_QCOM_FALKOR_ERRATUM_1009=y
 CONFIG_QCOM_QDF2400_ERRATUM_0065=y
@@ -1629,7 +1630,6 @@ CONFIG_OF_OVERLAY=y
 CONFIG_BLK_DEV=y
 # CONFIG_BLK_DEV_NULL_BLK is not set
 # CONFIG_ZRAM is not set
-CONFIG_ZRAM_DEF_COMP="unset-value"
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_LOOP_MIN_COUNT=8
 # CONFIG_BLK_DEV_DRBD is not set
@@ -2630,7 +2630,7 @@ CONFIG_POWER_SUPPLY_HWMON=y
 # CONFIG_IP5XXX_POWER is not set
 # CONFIG_TEST_POWER is not set
 # CONFIG_CHARGER_ADP5061 is not set
-CONFIG_BATTERY_CW2015=m
+CONFIG_BATTERY_CW2015=y
 # CONFIG_BATTERY_DS2780 is not set
 # CONFIG_BATTERY_DS2781 is not set
 # CONFIG_BATTERY_DS2782 is not set
@@ -3688,6 +3688,7 @@ CONFIG_FB_SYS_IMAGEBLIT=y
 CONFIG_FB_SYSMEM_FOPS=y
 CONFIG_FB_DEFERRED_IO=y
 CONFIG_FB_DMAMEM_HELPERS=y
+CONFIG_FB_DMAMEM_HELPERS_DEFERRED=y
 CONFIG_FB_SYSMEM_HELPERS=y
 CONFIG_FB_SYSMEM_HELPERS_DEFERRED=y
 CONFIG_FB_MODE_HELPERS=y
@@ -3860,7 +3861,7 @@ CONFIG_SND_SOC_I2C_AND_SPI=y
 # CONFIG_SND_SOC_AK4375 is not set
 # CONFIG_SND_SOC_AK4458 is not set
 # CONFIG_SND_SOC_AK4554 is not set
-# CONFIG_SND_SOC_AK4613 is not set
+CONFIG_SND_SOC_AK4613=m
 # CONFIG_SND_SOC_AK4619 is not set
 # CONFIG_SND_SOC_AK4642 is not set
 # CONFIG_SND_SOC_AK5386 is not set
@@ -3906,16 +3907,16 @@ CONFIG_SND_SOC_I2C_AND_SPI=y
 # CONFIG_SND_SOC_CX2072X is not set
 # CONFIG_SND_SOC_DA7213 is not set
 CONFIG_SND_SOC_DA7219=m
-CONFIG_SND_SOC_DMIC=m
+CONFIG_SND_SOC_DMIC=y
 CONFIG_SND_SOC_HDMI_CODEC=y
 # CONFIG_SND_SOC_ES7134 is not set
 # CONFIG_SND_SOC_ES7241 is not set
 # CONFIG_SND_SOC_ES8311 is not set
-# CONFIG_SND_SOC_ES8316 is not set
+CONFIG_SND_SOC_ES8316=y
 # CONFIG_SND_SOC_ES8326 is not set
-CONFIG_SND_SOC_ES8328=m
-CONFIG_SND_SOC_ES8328_I2C=m
-CONFIG_SND_SOC_ES8328_SPI=m
+CONFIG_SND_SOC_ES8328=y
+CONFIG_SND_SOC_ES8328_I2C=y
+CONFIG_SND_SOC_ES8328_SPI=y
 # CONFIG_SND_SOC_GTM601 is not set
 # CONFIG_SND_SOC_HDA is not set
 # CONFIG_SND_SOC_ICS43432 is not set
@@ -3923,7 +3924,7 @@ CONFIG_SND_SOC_ES8328_SPI=m
 # CONFIG_SND_SOC_INNO_RK3036 is not set
 # CONFIG_SND_SOC_MAX98088 is not set
 CONFIG_SND_SOC_MAX98090=y
-CONFIG_SND_SOC_MAX98357A=m
+CONFIG_SND_SOC_MAX98357A=y
 # CONFIG_SND_SOC_MAX98504 is not set
 # CONFIG_SND_SOC_MAX9867 is not set
 # CONFIG_SND_SOC_MAX98927 is not set
@@ -3964,7 +3965,7 @@ CONFIG_SND_SOC_RT5645=y
 # CONFIG_SND_SOC_RT9120 is not set
 # CONFIG_SND_SOC_RTQ9128 is not set
 # CONFIG_SND_SOC_SGTL5000 is not set
-CONFIG_SND_SOC_SIMPLE_AMPLIFIER=y
+CONFIG_SND_SOC_SIMPLE_AMPLIFIER=m
 # CONFIG_SND_SOC_SIMPLE_MUX is not set
 # CONFIG_SND_SOC_SMA1303 is not set
 CONFIG_SND_SOC_SPDIF=y
@@ -4083,7 +4084,7 @@ CONFIG_HID_CORSAIR=m
 # CONFIG_HID_MACALLY is not set
 CONFIG_HID_PRODIKEYS=m
 # CONFIG_HID_CMEDIA is not set
-CONFIG_HID_CP2112=m
+# CONFIG_HID_CP2112 is not set
 # CONFIG_HID_CREATIVE_SB0540 is not set
 CONFIG_HID_CYPRESS=m
 CONFIG_HID_DRAGONRISE=m
@@ -4122,7 +4123,7 @@ CONFIG_HID_LED=m
 CONFIG_HID_LENOVO=m
 # CONFIG_HID_LETSKETCH is not set
 CONFIG_HID_LOGITECH=m
-CONFIG_HID_LOGITECH_DJ=m
+# CONFIG_HID_LOGITECH_DJ is not set
 CONFIG_HID_LOGITECH_HIDPP=m
 CONFIG_LOGITECH_FF=y
 CONFIG_LOGIRUMBLEPAD2_FF=y
@@ -4898,6 +4899,7 @@ CONFIG_ARM_ARCH_TIMER_OOL_WORKAROUND=y
 CONFIG_FSL_ERRATUM_A008585=y
 CONFIG_HISILICON_ERRATUM_161010101=y
 CONFIG_ARM64_ERRATUM_858921=y
+# CONFIG_ARM_TIMER_SP804 is not set
 # end of Clock Source drivers
 
 CONFIG_MAILBOX=y
@@ -6673,7 +6675,6 @@ CONFIG_SCHED_INFO=y
 # CONFIG_SCHEDSTATS is not set
 # end of Scheduler Debugging
 
-# CONFIG_DEBUG_TIMEKEEPING is not set
 CONFIG_DEBUG_PREEMPT=y
 
 #
