--- a/Config.in
+++ b/Config.in
@@ -79,6 +79,8 @@ menu "System"
     source "$BR2_EXTERNAL_REGLINUX_PATH/package/batocera/gpu/rockchip-rga/Config.in"
     source "$BR2_EXTERNAL_REGLINUX_PATH/package/batocera/gpu/vulkan/glslang/Config.in"
     source "$BR2_EXTERNAL_REGLINUX_PATH/package/batocera/gpu/vulkan/spirv-cross/Config.in"
+    source "$BR2_EXTERNAL_REGLINUX_PATH/package/batocera/gpu/vulkan/vulkan-utility-libraries/Config.in"
+    source "$BR2_EXTERNAL_REGLINUX_PATH/package/batocera/gpu/vulkan/vulkan-validationlayers/Config.in"
     source "$BR2_EXTERNAL_REGLINUX_PATH/package/batocera/gpu/vulkan/vulkan-samples/Config.in"
     source "$BR2_EXTERNAL_REGLINUX_PATH/package/batocera/gpu/batocera-nvidia-lists/Config.in"
     source "$BR2_EXTERNAL_REGLINUX_PATH/package/batocera/gpu/batocera-amd/Config.in"
@@ -522,6 +524,7 @@ menu "REG.linux"
   source "$BR2_EXTERNAL_REGLINUX_PATH/package/reglinux/emulators/rpcs3/Config.in"
   source "$BR2_EXTERNAL_REGLINUX_PATH/package/reglinux/emulators/reglinux-mame/Config.in"
   source "$BR2_EXTERNAL_REGLINUX_PATH/package/reglinux/emulators/reglinux-scummvm/Config.in"
+  source "$BR2_EXTERNAL_REGLINUX_PATH/package/reglinux/emulators/shadps4/Config.in"
   source "$BR2_EXTERNAL_REGLINUX_PATH/package/reglinux/emulators/snes9x/Config.in"
   source "$BR2_EXTERNAL_REGLINUX_PATH/package/reglinux/emulators/sugarbox/Config.in"
   source "$BR2_EXTERNAL_REGLINUX_PATH/package/reglinux/emulators/scummvm/Config.in"
