--- a/package/reglinux/retroarch/retroarch/Config.in
+++ b/package/reglinux/retroarch/retroarch/Config.in
@@ -7,6 +7,7 @@ config BR2_PACKAGE_RETROARCH
 	select BR2_PACKAGE_FLAC
 	select BR2_PACKAGE_SLANG_SHADERS        if BR2_PACKAGE_REGLINUX_VULKAN
 	select BR2_PACKAGE_NOTO_CJK_FONTS
+	select BR2_PACKAGE_GAMEMODE
     help
       A multi emulator frontend.
 	  
