Hotfix SDL2 and PPSSPP builds

--- a/package/batocera/core/batocera-system/Config.in
+++ b/package/batocera/core/batocera-system/Config.in
@@ -1773,8 +1773,8 @@ config BR2_PACKAGE_BATOCERA_LINUX_FIRMWARES
 								   BR2_PACKAGE_BATOCERA_TARGET_H6	|| \
 								   BR2_PACKAGE_BATOCERA_TARGET_H616
 
-config BR2_PACKAGE_BATOCERA_SDL2
-	bool "BATOCERA SDL2"
+config BR2_PACKAGE_REGLINUX_SDL2
+	bool "REG-Linux SDL2"
 
 	select BR2_PACKAGE_SDL2
 	select BR2_PACKAGE_SDL2_GFX
@@ -1782,7 +1782,7 @@ config BR2_PACKAGE_BATOCERA_SDL2
 	select BR2_PACKAGE_SDL2_MIXER
 	select BR2_PACKAGE_SDL2_NET
 	select BR2_PACKAGE_SDL2_TTF
-	select BR2_PACKAGE_SDL2_OPENGLES
+	select BR2_PACKAGE_SDL2_OPENGLES	if BR2_PACKAGE_HAS_LIBGLES
 	select BR2_PACKAGE_SDL2_OPENGL		if BR2_PACKAGE_HAS_LIBGL
 	select BR2_PACKAGE_SDL2_X11		if BR2_PACKAGE_XORG7
 	select BR2_PACKAGE_SDL2_KMSDRM
