WIP experimental cemu/aarch64

--- a/package/batocera/core/batocera-system/Config.in
+++ b/package/batocera/core/batocera-system/Config.in
@@ -1430,7 +1430,11 @@ config BR2_PACKAGE_BATOCERA_CONSOLE_SYSTEMS
 	select BR2_PACKAGE_SHADPS4			if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY
 
 	# Wii U
-	select BR2_PACKAGE_CEMU				if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY
+	select BR2_PACKAGE_CEMU				if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY || \
+							   BR2_PACKAGE_BATOCERA_TARGET_BCM2712    || \
+							   BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA    || \
+							   BR2_PACKAGE_BATOCERA_TARGET_SM8250
+
 
 	# Panasonic 3DO
 	select BR2_PACKAGE_LIBRETRO_OPERA		if !BR2_PACKAGE_BATOCERA_TARGET_JZ4770		&& \
