--- a/package/reglinux/emulators/cemu/Config.in
+++ b/package/reglinux/emulators/cemu/Config.in
@@ -1,6 +1,6 @@
 config BR2_PACKAGE_CEMU
     bool "cemu"
-    depends on BR2_x86_64
+    depends on BR2_x86_64 || BR2_aarch64
     select BR2_PACKAGE_SDL2
     select BR2_PACKAGE_LIBCURL
     select BR2_PACKAGE_PUGIXML
