--- a/package/reglinux/emulators/flycast/Config.in
+++ b/package/reglinux/emulators/flycast/Config.in
@@ -1,8 +1,8 @@
 config BR2_PACKAGE_FLYCAST
     bool "flycast"
-    depends on BR2_PACKAGE_SDL2
-    depends on BR2_PACKAGE_LIBPNG
-    depends on BR2_PACKAGE_LIBZIP
+    select BR2_PACKAGE_SDL2
+    select BR2_PACKAGE_LIBPNG
+    select BR2_PACKAGE_LIBZIP
     depends on BR2_GCC_ENABLE_OPENMP
     select BR2_PACKAGE_BOOST
     select BR2_PACKAGE_BOOST_NOWIDE
