--- a/package/reglinux/libraries/reglinux-qt6/Config.in
+++ b/package/reglinux/libraries/reglinux-qt6/Config.in
@@ -12,6 +12,7 @@ config BR2_PACKAGE_REGLINUX_QT6
 	depends on BR2_ARCH_IS_64 || BR2_PACKAGE_HAS_LIBGL || BR2_PACKAGE_BATOCERA_GLES3
 
 	select BR2_PACKAGE_DOUBLE_CONVERSION
+	select BR2_PACKAGE_ICU
 	select BR2_PACKAGE_LIBB2
 	select BR2_PACKAGE_PCRE2
 	select BR2_PACKAGE_PCRE2_16
