Proper GLES Sonic CD patch (not to pollute GL-only boards)

--- a/package/batocera/core/batocera-system/Config.in
+++ b/package/batocera/core/batocera-system/Config.in
@@ -1429,11 +1429,11 @@ config BR2_PACKAGE_BATOCERA_CONSOLE_SYSTEMS
 	# Sony PS4
 	select BR2_PACKAGE_SHADPS4			if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY
 
-	# Wii U
+	# Wii U (bcm2712 vulkan init KO)
 	select BR2_PACKAGE_CEMU				if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY || \
-							   BR2_PACKAGE_BATOCERA_TARGET_BCM2712    || \
 							   BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA    || \
 							   BR2_PACKAGE_BATOCERA_TARGET_SM8250
+#							   BR2_PACKAGE_BATOCERA_TARGET_BCM2712    || \
 
 
 	# Panasonic 3DO
