--- a/board/batocera/allwinner/h616/linux-sunxi64-current.config
+++ b/board/batocera/allwinner/h616/linux-sunxi64-current.config
@@ -5106,7 +5106,7 @@ CONFIG_HID_GFRM=m
 CONFIG_HID_GLORIOUS=m
 CONFIG_HID_HOLTEK=m
 CONFIG_HOLTEK_FF=y
-# CONFIG_HID_GOOGLE_STADIA_FF is not set
+CONFIG_HID_GOOGLE_STADIA_FF=y
 # CONFIG_HID_VIVALDI is not set
 CONFIG_HID_GT683R=m
 CONFIG_HID_KEYTOUCH=m
