--- a/board/batocera/starfive/jh7110/linux-defconfig.config
+++ b/board/batocera/starfive/jh7110/linux-defconfig.config
@@ -5087,7 +5087,7 @@ CONFIG_SND_SIMPLE_CARD=y
 # CONFIG_SND_VIRTIO is not set
 CONFIG_HID_SUPPORT=y
 CONFIG_HID=y
-# CONFIG_HID_BATTERY_STRENGTH is not set
+CONFIG_HID_BATTERY_STRENGTH=y
 # CONFIG_HIDRAW is not set
 CONFIG_UHID=y
 CONFIG_HID_GENERIC=y
@@ -5125,7 +5125,7 @@ CONFIG_HID_GENERIC=y
 # CONFIG_HID_GFRM is not set
 # CONFIG_HID_GLORIOUS is not set
 # CONFIG_HID_HOLTEK is not set
-# CONFIG_HID_GOOGLE_STADIA_FF is not set
+CONFIG_HID_GOOGLE_STADIA_FF=y
 # CONFIG_HID_VIVALDI is not set
 # CONFIG_HID_GT683R is not set
 # CONFIG_HID_KEYTOUCH is not set
