--- a/board/batocera/broadcom/bcm2836/linux-broadcom32-current.config
+++ b/board/batocera/broadcom/bcm2836/linux-broadcom32-current.config
@@ -696,7 +696,7 @@ CONFIG_MODULE_COMPRESS_NONE=y
 # CONFIG_MODULE_COMPRESS_ZSTD is not set
 # CONFIG_MODULE_ALLOW_MISSING_NAMESPACE_IMPORTS is not set
 CONFIG_MODPROBE_PATH="/sbin/modprobe"
-# CONFIG_TRIM_UNUSED_KSYMS is not set
+CONFIG_TRIM_UNUSED_KSYMS=n
 CONFIG_MODULES_TREE_LOOKUP=y
 CONFIG_BLOCK=y
 CONFIG_BLOCK_LEGACY_AUTOLOAD=y
@@ -4596,7 +4596,7 @@ CONFIG_HID_EZKEY=y
 # CONFIG_HID_GFRM is not set
 # CONFIG_HID_GLORIOUS is not set
 # CONFIG_HID_HOLTEK is not set
-# CONFIG_HID_GOOGLE_STADIA_FF is not set
+CONFIG_HID_GOOGLE_STADIA_FF=y
 # CONFIG_HID_VIVALDI is not set
 # CONFIG_HID_GT683R is not set
 # CONFIG_HID_KEYTOUCH is not set
