--- a/board/batocera/rockchip/rk3326/linux-rk3326-defconfig.config
+++ b/board/batocera/rockchip/rk3326/linux-rk3326-defconfig.config
@@ -765,7 +765,7 @@ CONFIG_ASM_MODVERSIONS=y
 # CONFIG_MODULE_COMPRESS is not set
 # CONFIG_MODULE_ALLOW_MISSING_NAMESPACE_IMPORTS is not set
 CONFIG_MODPROBE_PATH="/sbin/modprobe"
-# CONFIG_TRIM_UNUSED_KSYMS is not set
+CONFIG_TRIM_UNUSED_KSYMS=n
 CONFIG_MODULES_TREE_LOOKUP=y
 CONFIG_BLOCK=y
 CONFIG_BLOCK_LEGACY_AUTOLOAD=y
@@ -4102,7 +4102,7 @@ CONFIG_HID_GFRM=m
 CONFIG_HID_HOLTEK=m
 CONFIG_HOLTEK_FF=y
 # CONFIG_HID_GOODIX_SPI is not set
-# CONFIG_HID_GOOGLE_STADIA_FF is not set
+CONFIG_HID_GOOGLE_STADIA_FF=y
 # CONFIG_HID_VIVALDI is not set
 CONFIG_HID_GT683R=m
 CONFIG_HID_KEYTOUCH=m
