--- a/board/batocera/saphira/linux-defconfig.config
+++ b/board/batocera/saphira/linux-defconfig.config
@@ -722,7 +722,7 @@ CONFIG_MODULE_COMPRESS_NONE=y
 # CONFIG_MODULE_COMPRESS_ZSTD is not set
 # CONFIG_MODULE_ALLOW_MISSING_NAMESPACE_IMPORTS is not set
 CONFIG_MODPROBE_PATH="/sbin/modprobe"
-# CONFIG_TRIM_UNUSED_KSYMS is not set
+CONFIG_TRIM_UNUSED_KSYMS=n
 CONFIG_MODULES_TREE_LOOKUP=y
 CONFIG_BLOCK=y
 CONFIG_BLOCK_LEGACY_AUTOLOAD=y
@@ -5295,7 +5295,7 @@ CONFIG_HID_GFRM=m
 CONFIG_HID_GLORIOUS=m
 CONFIG_HID_HOLTEK=m
 CONFIG_HOLTEK_FF=y
-# CONFIG_HID_GOOGLE_STADIA_FF is not set
+CONFIG_HID_GOOGLE_STADIA_FF=y
 # CONFIG_HID_VIVALDI is not set
 CONFIG_HID_GT683R=m
 CONFIG_HID_KEYTOUCH=m
