--- a/board/batocera/spacemit/bananapi-f3/linux-defconfig.config
+++ b/board/batocera/spacemit/bananapi-f3/linux-defconfig.config
@@ -5004,7 +5004,7 @@ CONFIG_SND_SIMPLE_CARD=y
 # HID support
 #
 CONFIG_HID=y
-# CONFIG_HID_BATTERY_STRENGTH is not set
+CONFIG_HID_BATTERY_STRENGTH=y
 # CONFIG_HIDRAW is not set
 CONFIG_UHID=y
 CONFIG_HID_GENERIC=y
