--- a/package/batocera/libraries/faudio/Config.in
+++ b/package/batocera/libraries/faudio/Config.in
@@ -1,8 +1,8 @@
 config BR2_PACKAGE_FAUDIO
 	bool "faudio"
 	select BR2_PACKAGE_SDL2
-	select BR2_PACKAGE_GSTREAMER1
-	select BR2_PACKAGE_GST1_PLUGINS_BASE
+	#select BR2_PACKAGE_GSTREAMER1
+	#select BR2_PACKAGE_GST1_PLUGINS_BASE
 	# Wine unconditionally builds shared libraries
 	depends on !BR2_STATIC_LIBS
 	help
