More GCC14 work + cleanup glslang/spirv-cross/shaderc

--- a/package/batocera/gpu/vulkan/glslang/Config.in
+++ b/package/batocera/gpu/vulkan/glslang/Config.in
@@ -1,8 +1,8 @@
 config BR2_PACKAGE_GLSLANG
   bool "glslang"
   depends on BR2_PACKAGE_WAYLAND || BR2_PACKAGE_XORG7
-  select BR2_PACKAGE_VULKAN_HEADERS
-  select BR2_PACKAGE_VULKAN_LOADER
+  select BR2_PACKAGE_VULKAN_HEADERS if BR2_PACKAGE_REGLINUX_VULKAN
+  select BR2_PACKAGE_VULKAN_LOADER  if BR2_PACKAGE_REGLINUX_VULKAN
   select BR2_PACKAGE_SPIRV_TOOLS
   help
     glslang from Khronos
