--- a/package/batocera/core/batocera-system/Config.in
+++ b/package/batocera/core/batocera-system/Config.in
@@ -1182,8 +1182,8 @@ config BR2_PACKAGE_BATOCERA_PORTS_SYSTEMS
 	# Fallout 2 open source engine
 	select BR2_PACKAGE_FALLOUT2_CE			if !BR2_PACKAGE_BATOCERA_TARGET_CHA
 
-	# Descent 1 & 2 open source engine
-	select BR2_PACKAGE_DXX_REBIRTH			if BR2_PACKAGE_HAS_LIBGL || BR2_PACKAGE_BATOCERA_GLES3
+	# Descent 1 & 2 open source engine (only support 64-bit architectures)
+	select BR2_PACKAGE_DXX_REBIRTH			if BR2_ARCH_IS_64 && (BR2_PACKAGE_HAS_LIBGL || BR2_PACKAGE_BATOCERA_GLES3)
 
 	# Wolfenstein: Enemy Territory
 	select BR2_PACKAGE_ETLEGACY			if BR2_ARCH_IS_64 && BR2_PACKAGE_BATOCERA_GLES3
