--- a/package/batocera/libraries/shaderc/Config.in
+++ b/package/batocera/libraries/shaderc/Config.in
@@ -2,6 +2,6 @@ config BR2_PACKAGE_SHADERC
     bool "shaderc"
     select BR2_PACKAGE_GLSLANG
     help
-      A collection of tools, libraries, and tests for Vulkan shader compilation.
+      A collection of tools, libraries and tests for shader compilation.
       
       https://github.com/google/shaderc
