--- a/package/batocera/core/batocera-configgen/configs/configgen-defaults.yml
+++ b/package/batocera/core/batocera-configgen/configs/configgen-defaults.yml
@@ -129,6 +129,9 @@ cgenius:
 channelf:
   emulator: libretro
   core:     freechaf
+chihiro:
+  emulator: xemu
+  core:     xemu
 coco:
   emulator: libretro
   core:     mame
