--- a/Config.in
+++ b/Config.in
@@ -579,6 +579,7 @@ menu "REG.linux"
   source "$BR2_EXTERNAL_REGLINUX_PATH/package/reglinux/libraries/libxmp/Config.in"
   source "$BR2_EXTERNAL_REGLINUX_PATH/package/reglinux/libraries/lunasvg/Config.in"
   source "$BR2_EXTERNAL_REGLINUX_PATH/package/reglinux/libraries/reglinux-qt6/Config.in"
+  source "$BR2_EXTERNAL_REGLINUX_PATH/package/reglinux/libraries/sdl3/Config.in"
   source "$BR2_EXTERNAL_REGLINUX_PATH/package/reglinux/libraries/vulkan-volk/Config.in"
   source "$BR2_EXTERNAL_REGLINUX_PATH/package/reglinux/libraries/reglinux-luajit/Config.in"
   source "$BR2_EXTERNAL_REGLINUX_PATH/package/reglinux/libraries/wxwidgets/Config.in"
