--- a/package/batocera/core/batocera-system/Config.in
+++ b/package/batocera/core/batocera-system/Config.in
@@ -360,6 +360,7 @@ config BR2_PACKAGE_BATOCERA_SYSTEM
 						   !BR2_PACKAGE_BATOCERA_TARGET_RK3326		&& \
 						   !BR2_PACKAGE_BATOCERA_TARGET_RK3588		&& \
 						   !BR2_PACKAGE_BATOCERA_TARGET_RK3128		&& \
+						   !BR2_PACKAGE_BATOCERA_TARGET_S812		&& \
 						   !BR2_PACKAGE_BATOCERA_TARGET_ODIN
 
 	select BR2_PACKAGE_RTL8821AU_MORROWNR	if BR2_PACKAGE_BATOCERA_TARGET_S922X || BR2_PACKAGE_BATOCERA_TARGET_A3GEN2 || BR2_PACKAGE_BATOCERA_TARGET_X86_ANY
@@ -1404,6 +1405,7 @@ config BR2_PACKAGE_BATOCERA_CONSOLE_SYSTEMS
 
 	# Microsoft XBOX
 	select BR2_PACKAGE_XEMU				if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY || \
+							   BR2_PACKAGE_BATOCERA_TARGET_BCM2712    || \
 							   BR2_PACKAGE_BATOCERA_TARGET_SM8250     || \
 							   BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA
 
@@ -1420,20 +1422,20 @@ config BR2_PACKAGE_BATOCERA_CONSOLE_SYSTEMS
                                                            BR2_PACKAGE_BATOCERA_TARGET_SM8250     || \
 							   BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA
 
-	# Sony PS3
+	# Sony PS3 (saphira build error since BR bump)
 	select BR2_PACKAGE_RPCS3			if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY || \
 							   BR2_PACKAGE_BATOCERA_TARGET_BCM2712    || \
-							   BR2_PACKAGE_BATOCERA_TARGET_SM8250     || \
-							   BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA
+							   BR2_PACKAGE_BATOCERA_TARGET_SM8250
+							   #|| BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA
 
 	# Sony PS4
-	select BR2_PACKAGE_SHADPS4			if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY
+	select BR2_PACKAGE_SHADPS4			if BR2_PACKAGE_BATOCERA_TARGET_X86_64_V3
 
-	# Wii U (bcm2712 vulkan init KO)
+	# Wii U
 	select BR2_PACKAGE_CEMU				if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY || \
+							   BR2_PACKAGE_BATOCERA_TARGET_BCM2712    || \
 							   BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA    || \
 							   BR2_PACKAGE_BATOCERA_TARGET_SM8250
-#							   BR2_PACKAGE_BATOCERA_TARGET_BCM2712    || \
 
 
 	# Panasonic 3DO
@@ -1809,13 +1811,6 @@ config BR2_PACKAGE_REGLINUX_GAMESCOPE
 	select BR2_PACKAGE_SEATD
 	select BR2_PACKAGE_SEATD_DAEMON
 	select BR2_PACKAGE_GAMESCOPE
-
-config BR2_PACKAGE_REGLINUX_WESTON
-	bool "REG-Linux weston packages selection"
-
-	select BR2_PACKAGE_SEATD
-	select BR2_PACKAGE_SEATD_DAEMON
-	select BR2_PACKAGE_WESTON
 
 config BR2_PACKAGE_REGLINUX_XWAYLAND
 	bool "REG-Linux xwayland packages selection"
