--- a/package/reglinux/ports/etlegacy/Config.in
+++ b/package/reglinux/ports/etlegacy/Config.in
@@ -10,6 +10,8 @@ config BR2_PACKAGE_ETLEGACY
 	select BR2_PACKAGE_OPENAL
 	select BR2_PACKAGE_OPENSSL
 	select BR2_PACKAGE_SDL2
+	select BR2_PACKAGE_MINIZIP
+	select BR2_PACKAGE_CJSON
 	help
 	  ET: Legacy is an open source project based on the code of Wolfenstein: Enemy Territory
 	  which was released in 2010 under the terms of the GPLv3 license.
