--- a/package/batocera/core/batocera-system/Config.in
+++ b/package/batocera/core/batocera-system/Config.in
@@ -235,9 +235,9 @@ config BR2_PACKAGE_BATOCERA_SYSTEM
 	select BR2_PACKAGE_PARTED				# partition management (for the first boot)
 	select BR2_PACKAGE_USBMOUNT				# usb key/sd card mounter
 	select BR2_PACKAGE_USBUTILS				# usb key/sd card tools
-	select BR2_PACKAGE_BATOCERA_SCRIPTS			# batocera scripts
-	select BR2_PACKAGE_REGLINUX_SCREEN			# reglinux screen configuration
-	select BR2_PACKAGE_BATOCERA_SETTINGS			# system-settings-get/set
+	select BR2_PACKAGE_REGLINUX_SCRIPTS		# REG-Linux scripts
+	select BR2_PACKAGE_REGLINUX_SCREEN		# reglinux screen configuration
+	select BR2_PACKAGE_BATOCERA_SETTINGS	# system-settings-get/set
 
 	# Use ALSA light audio stack for weak platforms
 	select BR2_PACKAGE_BATOCERA_AUDIO_ALSA			if BR2_PACKAGE_BATOCERA_TARGET_BCM2835 || \
