--- a/board/batocera/rockchip/rk3128/powkiddy-a13/boot/extlinux.conf
+++ b/board/batocera/rockchip/rk3128/powkiddy-a13/boot/extlinux.conf
@@ -4,7 +4,7 @@ LABEL reg.linux
 LINUX /boot/linux
 
 # Default Powkiddy A12 & A13 with 1024x600 resolution
-FDT /boot/rk3128-powkiddy-a13-rev-ab.dtb
+#FDT /boot/rk3128-powkiddy-a13-rev-ab.dtb
 
 # Powkiddy Rev C (800x480 screen)
 #FDT /boot/rk3128-powkiddy-a12-rev-c.dtb
@@ -12,4 +12,8 @@ FDT /boot/rk3128-powkiddy-a13-rev-ab.dtb
 # Powkiddy Rev D (800x480 screen)
 #FDT /boot/rk3128-powkiddy-a12-rev-d.dtb
 
-APPEND initrd=/boot/initrd.lz4 label=REGLINUX rootwait earlycon=uart8250,mmio32,0x20060000 rootwait console=ttyFIQ0,115200n8 loglevel=7 swiotlb=1 quiet splash
+# Testing
+FDT /boot/rk3128-xpi-3128.dtb
+
+APPEND initrd=/boot/initrd.lz4 label=REGLINUX rootwait earlycon=uart8250,mmio32,0x20060000 rootwait console=ttyFIQ0,115200n8 loglevel=7 swiotlb=1
+#APPEND initrd=/boot/initrd.lz4 label=REGLINUX rootwait earlycon=uart8250,mmio32,0x20060000 rootwait console=ttyFIQ0,115200n8 loglevel=7 swiotlb=1 quiet splash
