--- a/package/reglinux/reglinux-samba/Config.in
+++ b/package/reglinux/reglinux-samba/Config.in
@@ -2,13 +2,12 @@ config BR2_PACKAGE_REGLINUX_SAMBA
         bool "reglinux-samba"
 
 	select BR2_PACKAGE_SAMBA4	\
-		if BR2_PACKAGE_BATOCERA_TARGET_WINE    || \
-		   BR2_PACKAGE_BATOCERA_TARGET_RK3128  || \
+		if BR2_PACKAGE_BATOCERA_TARGET_X86_ANY || \
 		   BR2_PACKAGE_BATOCERA_TARGET_A3GEN2  || \
 		   BR2_PACKAGE_BATOCERA_TARGET_S9GEN4
 
 	select BR2_PACKAGE_KSMBD_TOOLS  \
-		if (!BR2_PACKAGE_BATOCERA_TARGET_RK3128) && (!BR2_PACKAGE_BATOCERA_TARGET_A3GEN2) && (!BR2_PACKAGE_BATOCERA_TARGET_S9GEN4)
+		if (!BR2_PACKAGE_BATOCERA_TARGET_A3GEN2) && (!BR2_PACKAGE_BATOCERA_TARGET_S9GEN4)
 
         help
           Samba custom implementation using either ksmbd or plain samba4
